# cprofiler

./: LICENSE  README.md  SETUP_PYTHON.md  SETUP_SERVER.md  pyproject.toml
cprof_flask/: cprof_flask.py
cprof_flask/static/css/: profiler.css
cprof_flask/templates/: examples.html  help.html  index.html
cprofiler/: __init__.py  aminoacid.py  fasta.py  main.py  profile.py
cprofiler/data/: alpha_morf.fa  disprot_3.4.fa  heterodimers.fa  homodimers.fa  hubs.fa  monomers.fa  pdb_s25.fa  sprot51_5k.fa
cprofiler/tests/: test_amino.py  test_cli_discover.sh  test_cli_plot.sh  test_cli_relent.sh  test_fasta.py  test_profile.py
